first steps on a long way

--- a/nim.cfg
+++ b/nim.cfg
@@ -1,3 +1,17 @@
 --threads:on
 --deadCodeElim:on
---nimcache:"~/.nimcache"
+--nimcache:"/~/.nimcache"
+
+#--define:debugInfo_enabled
+--define:debugWarn_enabled
+--define:debugTrace_enabled
+
+--define:inputEventLoop_enabled
+--define:mainChannelInt_enabled
+--define:mainChannelString_enabled
+--define:mainChannelIntTalkback_enabled
+--define:mainChannelIntChecked_enabled
+--define:mainChannelStringChecked_enabled
+--define:mainChannelJsonChecked_enabled
+--define:timedActions_enabled
+--define:mainFlags_enabled
