--- a/nim.cfg
+++ b/nim.cfg
@@ -3,8 +3,8 @@
 --nimcache:"/~/.nimcache"
 
 #--define:debugInfo_enabled
---define:debugWarn_enabled
---define:debugTrace_enabled
+#--define:debugWarn_enabled
+#--define:debugTrace_enabled
 
 --define:inputEventLoop_enabled
 --define:mainChannelInt_enabled
