--- a/nim.cfg
+++ b/nim.cfg
@@ -2,9 +2,11 @@
 --deadCodeElim:on
 --nimcache:"/~/.nimcache"
 
+--define:logger_enabled
+
 #--define:debugInfo_enabled
-#--define:debugWarn_enabled
 #--define:debugTrace_enabled
+#--define:debugWarn_enabled
 
 --define:inputEventLoop_enabled
 --define:mainChannelInt_enabled
