--- a/nim.cfg
+++ b/nim.cfg
@@ -11,10 +11,10 @@
 
 --define:inputEventLoop_enabled # main HID event loop
 --define:mainChannelInt_enabled 
---define:mainChannelString_enabled
---define:mainChannelIntTalkback_enabled # sends ptr int, change int value to talk back
---define:mainChannelIntChecked_enabled # sends int and ptr Channel[int] to talk back
+#--define:mainChannelString_enabled
+#--define:mainChannelIntTalkback_enabled # sends ptr int, change int value to talk back
+#--define:mainChannelIntChecked_enabled # sends int and ptr Channel[int] to talk back
 #--define:mainChannelStringChecked_enabled # sends string and Channel[string] not impl.
---define:mainChannelJsonChecked_enabled # aka InterCom
+#--define:mainChannelJsonChecked_enabled # aka InterCom
 --define:timedActions_enabled
 #--define:mainFlags_enabled # not implemented
